# Sea_buttle_course_work

./: CMakeLists.txt  README.md  board.txt  config.txt  main.py  print_board.txt  sea.py  sfg.py  x.txt
prj.lab/UUU/: CMakeLists.txt  ClikeUUU.cpp  ClikeUUU.h  UUU.cpp  UUU.h  UUU.hpp  UUU_main.c  UUU_main.cpp  UUU_test.cpp
